planning type + them start

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,10 +9,13 @@
 
 		<script id="sap-ui-bootstrap"
 			src="../../resources/sap-ui-core.js"
-			data-sap-ui-libs="sap.m"
+			data-sap-ui-libs="sap.m, sap.me, sap.ui.commons"
 			data-sap-ui-theme="sap_bluecrystal"
+              data-sap-ui-xx-bindingSyntax="complex"   
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"dummenorangeMM": ""}'>
+			data-sap-ui-resourceroots='{"dummenorangeMM": ""}'
+			data-sap-ui-theme-roots='{"custom1bluecrystal" : "/custom1bluecrystal/UI5/"}'
+			>
 		</script>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,6 +23,7 @@
 		<script>
 			sap.ui.getCore().attachInit(function() {
 				new sap.m.Shell({
+				    backgroundImage: "images/tile-flower1-orange.jpg",
 					app: new sap.ui.core.ComponentContainer({
 						height : "100%",
 						name : "dummenorangeMM"
