--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,7 +9,7 @@
 
 		<script id="sap-ui-bootstrap"
 			src="../../resources/sap-ui-core.js"
-			data-sap-ui-libs="sap.m, sap.me, sap.ui.commons"
+			data-sap-ui-libs="sap.m, sap.me, sap.ui.commons, sap.ui.table"
 			data-sap-ui-theme="sap_bluecrystal"
               data-sap-ui-xx-bindingSyntax="complex"   
 			data-sap-ui-compatVersion="edge"
